--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,14 +1,12 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.36.1
-IPADDR_END 156.96.36.254
+IPADDR_START 156.96.89.1
+IPADDR_END 156.96.89.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER test1 test1password 156.96.36.1-156.96.36.100
-USER test2 test2password 156.96.36.101 156.96.36.102 156.96.36.103 
-USER test3 test3password 156.96.36.104-156.96.36.254
+USER suprem4local fkladoiwke 156.96.89.1-156.96.89.100
